[project]
name = "water-utility-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[postgresql-asyncpg]>=2.0.40",
    "typer>=0.15.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "rich>=14.0.0", "ruff>=0.11.6"]

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "manage"]

[tool.ruff]
namespace-packages = ["migrations"]

[tool.ruff.lint]
select = [
    "ERA",    # Comments
    "FAST",   # FastAPI
    "ANN",    # Annotations
    "ASYNC",  # AsyncIO
    "S",      # Security(bandit)
    "BLE",    # Disallow BaseException
    "FBT",    # Disallow positional bool flags
    "B",      # Common bugs(bugbear)
    "A",      # Builtins
    "COM818", # Tuple commas
    "C4",     # Comprehensions ruless
    "DTZ",    # Datetime TZ rules
    "T10",    # Disallow breakpoint
    "EM",     # Disallow raw string exception to clear out
    "EXE",    # Shebang rules
    "ISC",    # Strings concat
    "LOG",    # Logging rules
    "G",      # Logging formatting
    "INP",    # Implicit modules namespace
    "PIE",    # Misc rules(pie)
    "T20",    # Disallow print
    "RSE",    # Raise rule
    "RET",    # Consistent return rules
    "SLF",    # Disallow using private members
    "SIM",    # Common simplification rules
    "TID",    # Imports rules
    "TC",     # Type cheking block rules
    "ARG",    # Disallow unused vars
    "PTH",    # Enforce use pathlib
    "FLY",    # String join lint
    "I",      # Import sort
    "C90",    # Lint complexity
    "N",      # Naming rules
    "E",      # Pycodestyle errors
    "W",      # Pycodestyle warrnings
]
preview = true

[tool.ruff.lint.per-file-ignores]
"app/core/config.py" = [
    "N802", # Allow uppercase property names to settings
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["directive"]
